[package]
name = "actix-web-utils"
version = "0.1.0"
edition = "2018"
homepage = "https://github.com/ptechen"
documentation = "https://github.com/ptechen/actix-web-utils/blob/main/README.md"
repository = "https://github.com/ptechen/actix-web-utils.git"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0.127"
serde_derive = "^1.0.127"
serde_json = "^1.0.66"
validator = "^0.14.0"
validator_derive = "^0.14.0"
actix-web = { git = "https://github.com/actix/actix-web.git", rev = "293c52c3ef42663d90d4b09acd22869ee6919788" }
